# LiberCode

./: .devmate.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  devmate.py  pyproject.toml  setup.py
ai_handoff/: README.md  architecture.md  flows.md  improvement-roadmap.md  risk-register.md  testing-and-verification.md
docs/: commands.md  providers.md
libercode/: __main__.py  agent.py  checkpoint.py  cli.py  config.py  differ.py  git_utils.py  memory.py  modes.py  scratch.py  shell.py  stop_condition.py  task.py  tui.py  ui.py
libercode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
libercode/prompts/: build.md  debug.md  plan.md  spec.md
libercode/providers/: __init__.py  anthropic_provider.py  base.py  builtin.py  cerebras_provider.py  cohere_provider.py  custom.py  deepseek_provider.py  google_provider.py  groq_provider.py  mistral_provider.py  nvidia_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py  together_provider.py  xai_provider.py
libercode/storage/: __init__.py  file_store.py  sqlite_store.py
tests/: test_agent.py  test_checkpoint.py  test_config.py  test_entrypoint.py  test_git_utils.py  test_providers.py  test_shell.py  test_slash_commands.py
