[project]
name = "libercode"
version = "0.1.0"
description = "An open-source terminal coding assistant that feels like a real pair programmer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LiberCode Contributors" },
]

dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/libercode/libercode"

[project.scripts]
libercode = "libercode.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
