[project]
name = "libercode"
version = "0.1.0"
description = "An open-source terminal coding assistant that feels like a real pair programmer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LiberCode Contributors" },
]

dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0",
    "tiktoken>=0.5.0",
    "textual>=0.40.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.40"]
google     = ["google-generativeai>=0.8"]
groq       = ["groq>=0.9"]
ollama     = ["openai>=1.0"]
deepseek   = ["openai>=1.0"]
together   = ["openai>=1.0"]
openrouter = ["openai>=1.0", "httpx>=0.27"]
all        = [
    "openai>=1.0",
    "anthropic>=0.40",
    "google-generativeai>=0.8",
    "groq>=0.9",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/libercode/libercode"

[project.scripts]
libercode = "libercode.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libercode*"]
